fix: css overflow bug

--- a/static/style.css
+++ b/static/style.css
@@ -1,10 +1,12 @@
 html {
-    width: 100vw;
-    height: 100vh;
+    /* width: 100vw;
+    height: 100vh; */
+    overflow: hidden;
 }
 
 .app {
     display: flex;
+    overflow: hidden;
 }
 
 .canvas {
